[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "action-mirror"
version = "0.1.0"
description = "Agent action provenance + mutual witness network — who did what, provably."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mother Seara", email = "ruinbl82@gmail.com" }]
keywords = [
  "provenance", "audit", "agent", "tamper-evident", "ledger",
  "integrity", "ai-safety", "observability",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
am = "actmirror.am:_cli"

[tool.setuptools]
packages = ["actmirror"]
